[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/flappy.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="LabelTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.5
margin_top = 24.0
margin_right = 92.5
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Flappy Duck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelAux" type="Label" parent="."]
margin_left = 216.0
margin_top = 72.0
margin_right = 293.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 2 )
text = "by
Iury Ramos Garcia"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 16.0
margin_top = 256.0
margin_right = 67.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 2 )
text = "v1.0 ( 2021 )"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHighScore" type="Label" parent="."]
margin_left = 256.0
margin_top = 256.0
margin_right = 491.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 2 )
text = "High Score: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPaused" type="Label" parent="."]
visible = false
margin_left = 192.0
margin_top = 80.0
margin_right = 320.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 3 )
text = "Game Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainButtons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnContinue" type="Button" parent="MainButtons"]
margin_left = 128.0
margin_top = 120.0
margin_right = 384.0
margin_bottom = 142.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.662745, 0.662745, 0.662745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnNewGame" type="Button" parent="MainButtons"]
margin_left = 128.0
margin_top = 152.0
margin_right = 384.0
margin_bottom = 174.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.662745, 0.662745, 0.662745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "New Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnSettings" type="Button" parent="MainButtons"]
margin_left = 128.0
margin_top = 184.0
margin_right = 384.0
margin_bottom = 206.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.662745, 0.662745, 0.662745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnQuitGame" type="Button" parent="MainButtons"]
margin_left = 128.0
margin_top = 216.0
margin_right = 384.0
margin_bottom = 238.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.662745, 0.662745, 0.662745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Quit Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButtons" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnToggleFS" type="Button" parent="SettingsButtons"]
margin_left = 128.0
margin_top = 152.0
margin_right = 384.0
margin_bottom = 174.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.662745, 0.662745, 0.662745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Toggle Full Screen"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnSounds" type="Button" parent="SettingsButtons"]
margin_left = 128.0
margin_top = 184.0
margin_right = 384.0
margin_bottom = 206.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.662745, 0.662745, 0.662745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "No Sounds"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnGoBack" type="Button" parent="SettingsButtons"]
margin_left = 128.0
margin_top = 216.0
margin_right = 384.0
margin_bottom = 238.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.662745, 0.662745, 0.662745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Go Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainButtons/BtnContinue" to="." method="_on_BtnContinue_pressed"]
[connection signal="pressed" from="MainButtons/BtnNewGame" to="." method="_on_BtnNewGame_pressed"]
[connection signal="pressed" from="MainButtons/BtnSettings" to="." method="_on_BtnSettings_pressed"]
[connection signal="pressed" from="MainButtons/BtnQuitGame" to="." method="_on_BtnQuitGame_pressed"]
[connection signal="pressed" from="SettingsButtons/BtnToggleFS" to="." method="_on_BtnToggleFS_pressed"]
[connection signal="pressed" from="SettingsButtons/BtnSounds" to="." method="_on_BtnSounds_pressed"]
[connection signal="pressed" from="SettingsButtons/BtnGoBack" to="." method="_on_BtnGoBack_pressed"]
